--- a/composer.json
+++ b/composer.json
@@ -38,13 +38,15 @@
             "Illuminate\\Foundation\\ComposerScripts::postInstall",
             "php artisan optimize",
             "php artisan migrate --force",
-           "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+           "php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
+            "php artisan key:generate"
         ],
         "post-update-cmd": [
             "Illuminate\\Foundation\\ComposerScripts::postUpdate",
             "php artisan optimize",
             "php artisan migrate --force",
-            "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+            "php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
+            "php artisan key:generate"
         ]
     },
     "config": {
